Updated Index Page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
     <nav>
-        <h1>Afghan Student Association</h1>
 
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -20,10 +20,16 @@
         </ul>
     </nav>
 
+    <section class="img-container">
+        <img src="images/Afghanistan.jpeg" alt="Afghanistan Image" class="afg-img">
+        <div class="center">Afghan Student Association</div>
+    </section>
+
     <div id="desc" class="desc">
 
-
-        <h3> placeholder: ASA is about ...</h2>
+        <div class="desc-writing">
+            <p> placeholder: ASA is about cdsichsdjncsdjbjcbsdjcs csdhcvs fhkh kweh fke bbwef uwehfj w jdbw bvhvh v hvg hvg h vgh vkhvk</p>
+        </div>
     </div>
     
 </body>
