--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,10 +20,10 @@
         </ul>
     </nav>
 
-    <section class="img-container">
+    <div class="img-container">
         <img src="images/Afghanistan.jpeg" alt="Afghanistan Image" class="afg-img">
         <div class="center">Afghan Student Association</div>
-    </section>
+    </div>
 
     <div id="desc" class="desc">
 
