--- a/frontend/events.html
+++ b/frontend/events.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Events</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     
     <nav>
-        <h1>Afghan Student Association</h1>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
@@ -20,7 +20,36 @@
     </nav>
 
     <div id="events" class="events">
-        <h1>Upcoming Events</h1>
+        <h1 style="padding: 5%; text-align: center;">Upcoming Events</h1>
+
+        <div class="flex-display">
+            <div class="cards">
+                <img src="https://placehold.co/300" alt="event-photo" style="width: 100%; border-top-left-radius: 10%; border-top-right-radius: 10%;">
+                <div class="container">
+                    <h4><b>Cultural Week</b></h4>
+                    <p>Consists of Food Festival, Fashion Show, Cultural Showcase, and more!</p>
+                </div>
+            </div>
+
+            <div class="cards">
+                <img src="https://placehold.co/300" alt="event-photo" style="width: 100%; border-top-left-radius: 10%; border-top-right-radius: 10%;">
+                <div class="container">
+                    <h4><b>Nowroz Gala</b></h4>
+                    <p>Nowroz celebration with food, music, and dancing!</p>
+                </div>
+            </div>
+
+            <div class="cards">
+                <img src="https://placehold.co/300" alt="event-photo" style="width: 100%; border-top-left-radius: 10%; border-top-right-radius: 10%;">
+                <div class="container">
+                    <h4><b>Eid Event</b></h4>
+                    <p>Eid...</p>
+                </div>
+            </div>
+
+
+
+        </div>
     </div>
 </body>
 </html>
