--- a/frontend/contacts.html
+++ b/frontend/contacts.html
@@ -11,34 +11,36 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="about.html">Team</a></li>
             <li><a href="events.html">Events</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
             <li><a href="contacts.html">Contact</a></li>
 
         </ul>
     </nav>
 
-    <h1 style="text-align: center; padding: 5%;">Contact Us!</h1>
+
+
+   
 
     <div id="contact" class="contact">
+        <h1 style="text-align: center; padding: 5%; font-family: fantasy; font-weight:bolder; font-size: 2.5em; padding-bottom: 0%;">Contact Us!</h1>
         <div class="flex-display">
             <div class="cards">
-                <img src="https://placehold.co/300" alt="event-photo" style="width: 100%; border-top-left-radius: 10%; border-top-right-radius: 10%;">
+                <a href="https://www.instagram.com/asa_york?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img src="images/ig.avif" alt="event-photo" style="width: 100%; border-top-left-radius: 10%; border-top-right-radius: 10%;"></a>
                 <div class="container">
                     <h4 style="text-align: center;"><b>Instagram</b></h4>
                 </div>
             </div>
 
             <div class="cards">
-                <img src="https://placehold.co/300" alt="event-photo" style="width: 100%; border-top-left-radius: 10%; border-top-right-radius: 10%;">
+                <a href="https://www.tiktok.com/@asayorku?_r=1&_t=ZS-92uQyKO6WJg"><img src="images/tiktok.png" alt="event-photo" style="width: 100%; border-top-left-radius: 10%; border-top-right-radius: 10%;"></a>
                 <div class="container">
                     <h4 style="text-align: center;"><b>TikTok</b></h4>
                 </div>
             </div>
 
             <div class="cards">
-                <img src="https://placehold.co/300" alt="event-photo" style="width: 100%; border-top-left-radius: 10%; border-top-right-radius: 10%;">
+                <a href="https://chat.whatsapp.com/JZy9UEbXtkwJntMzh88JQ1?mode=ac_t&utm_source=ig&utm_medium=social&utm_content=link_in_bio&fbclid=PAZXh0bgNhZW0CMTEAc3J0YwZhcHBfaWQMMjU2MjgxMDQwNTU4AAGnAaTaj-6Eksk4Pkbekg0gax1ZARnY6DKsLglN84JPc4QjzUrqH7AxjVqMDoc_aem_IVsDqj2QIVrAUlPk2pCuug"><img src="images/whatsapp.png" alt="event-photo" style="width: 100%; border-top-left-radius: 10%; border-top-right-radius: 10%;"></a>
                 <div class="container">
                     <h4 style="text-align: center;"><b>WhatsApp</b></h4>
                 </div>
