--- a/frontend/events.html
+++ b/frontend/events.html
@@ -11,39 +11,38 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="about.html">Team</a></li>
             <li><a href="events.html">Events</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
             <li><a href="contacts.html">Contact</a></li>
 
         </ul>
     </nav>
+    
 
     <div id="events" class="events">
-        <h1 style="padding: 5%; text-align: center;">Upcoming Events</h1>
+        <h1 style="padding: 5%; text-align: center; font-family: fantasy; font-weight:bolder; font-size: 2.5em; padding-bottom: 0%;">Upcoming Events</h1>
 
         <div class="flex-display">
             <div class="cards">
-                <img src="https://placehold.co/300" alt="event-photo" style="width: 100%; border-top-left-radius: 10%; border-top-right-radius: 10%;">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSd9-NEXFE4fB-WFAm7q2Zqdra97Kklb4LjmZj_JGMEIDxO7dA/viewform" target="_blank"><img src="images/Screenshot 2026-01-09 at 3.40.42 PM.png" alt="event-photo" style="width: 100%; border-top-left-radius: 10%; border-top-right-radius: 10%;"></a>
                 <div class="container">
                     <h4><b>Cultural Week</b></h4>
-                    <p>Consists of Food Festival, Fashion Show, Cultural Showcase, and more!</p>
+                    <p>Click to register!</p>
                 </div>
             </div>
 
             <div class="cards">
-                <img src="https://placehold.co/300" alt="event-photo" style="width: 100%; border-top-left-radius: 10%; border-top-right-radius: 10%;">
+                <img src="images/nowroz.png" alt="event-photo" style="width: 100%; border-top-left-radius: 10%; border-top-right-radius: 10%;">
                 <div class="container">
-                    <h4><b>Nowroz Gala</b></h4>
-                    <p>Nowroz celebration with food, music, and dancing!</p>
+                    <h4><b>Nowroz Gala (Coming Soon)</b></h4>
+                    <a href="https://www.instagram.com/asanowruzformal?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank"><h4>Follow @asanowrozformal for updates (click here)!</h4></a>
                 </div>
             </div>
 
             <div class="cards">
-                <img src="https://placehold.co/300" alt="event-photo" style="width: 100%; border-top-left-radius: 10%; border-top-right-radius: 10%;">
+                <img src="images/Coming Soon.png" alt="event-photo" style="width: 100%; border-top-left-radius: 10%; border-top-right-radius: 10%;">
                 <div class="container">
-                    <h4><b>Eid Event</b></h4>
-                    <p>Eid...</p>
+                    <h4><b>Eid Event (Coming Soon)</b></h4>
                 </div>
             </div>
 
